2008-10-23  Tobias Grosser  <grosser@fim.uni-passau.de>

PR middle-end/37886
	* graphite.c (gloog): Replace EXIT_BLOCK_PTR with scop exit. 


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/graphite@141328 138bc75d-0d04-0410-961f-82ee72b054a4